# kinematics

./: .gitignore  CMakeLists.txt  imgui.ini  object_states.json
RoboticArm/: cylinder.mtl
include/: buffer_object.hpp  camera.hpp  shader.hpp
shaders/: selection.frag  shader.frag  shader.vert  wireframe.frag  wireframe.vert
src/: glad.c  main.cpp  shader.cpp
